graph working - with minor bugs and tweaks needed

--- a/cea/default.config
+++ b/cea/default.config
@@ -2153,8 +2153,29 @@ y-normalised-by.type = ChoiceParameter
 y-normalised-by.choices = no_normalisation, gross_floor_area, solar_technology_area_installed_for_respective_surface
 y-normalised-by.help = Select the normalisation factor. The unit of area is m2.
 
-
 x-to-plot = building
 x-to-plot.type = ChoiceParameter
 x-to-plot.choices = building, building_faceted_by_months, building_faceted_by_seasons, building_faceted_by_construction_type, building_faceted_by_main_use_type, district_and_hourly, district_and_hourly_faceted_by_months, district_and_hourly_faceted_by_seasons, district_and_daily, district_and_daily_faceted_by_months, district_and_daily_faceted_by_seasons, district_and_monthly, district_and_monthly_faceted_by_seasons, district_and_seasonally, district_and_annually_or_selected_period
+x-to-plot.help = Select the column to plot on the X-axis.
+
+[plots-cost-breakdown]
+y-cost-category-to-plot = CAPEX_annualised, OPEX_fixed_annual, OPEX_variable_annual
+y-cost-category-to-plot.type = MultiChoiceParameter
+y-cost-category-to-plot.choices = CAPEX_total, CAPEX_annualised, OPEX_fixed_annual, OPEX_variable_annual, Total_annualised_costs
+y-cost-category-to-plot.help = Select cost category/categories to plot. CAPEX = capital expenditure, OPEX = operational expenditure. CAPEX_total = life time years X CAPEX_annualised. Total_annualised_costs = CAPEX_annualised + OPEX_fixed_annual + OPEX_variable_annual.
+
+y-metric-unit = USD
+y-metric-unit.type = ChoiceParameter
+y-metric-unit.choices = USD, kUSD, mioUSD
+y-metric-unit.help = Select the unit of the metric to plot for the Y-axis.
+y-metric-unit.category = Y-axis settings
+
+y-normalised-by = gross_floor_area
+y-normalised-by.type = ChoiceParameter
+y-normalised-by.choices = no_normalisation, gross_floor_area, conditioned_floor_area
+y-normalised-by.help = Select the normalisation factor. The unit of area is m2.
+
+x-to-plot = by_scale
+x-to-plot.type = ChoiceParameter
+x-to-plot.choices = by_building_and_network, by_scale, by_energy_carrier, by_operation_service, by_component_type
 x-to-plot.help = Select the column to plot on the X-axis.
