--- a/cea/default.config
+++ b/cea/default.config
@@ -2179,3 +2179,4 @@ x-to-plot = by_scale
 x-to-plot.type = ChoiceParameter
 x-to-plot.choices = by_building_and_network, by_scale, by_energy_carrier, by_operation_service, by_component_type
 x-to-plot.help = Select the column to plot on the X-axis.
+x-to-plot.category = X-axis settings
