--- a/cea/scripts.yml
+++ b/cea/scripts.yml
@@ -839,7 +839,7 @@ Visualisation:
     interfaces: [cli, dashboard]
     module: cea.visualisation.special.cost_breakdown
     parameters: ['general:scenario',
-#                 plots-general,
+                 plots-general,
                  plots-cost-breakdown]
     input-files:
       - [get_baseline_costs_detailed]
