--- a/cea/default.config
+++ b/cea/default.config
@@ -382,7 +382,7 @@ network-name =
 network-name.type = NetworkLayoutChoiceParameter
 network-name.help = Select an existing network layout for the cost calculation. Networks are created by the 'thermal-network' script (part 1 and part 2 must be completed).
 
-network-type = DH
+network-type = DH, DC
 network-type.type = MultiChoiceParameter
 network-type.choices = DH, DC
 network-type.help = Type(s) of district network to calculate costs for: "DH" (district heating), "DC" (district cooling), or both. Select multiple by separating with commas.
