adding in dc and dh summary?

--- a/cea/default.config
+++ b/cea/default.config
@@ -875,15 +875,10 @@ metrics-other-renewables.type = BooleanParameter
 metrics-other-renewables.help = Metrics to calculate: geothermal heat potential[kWh], area for ground source heat pump[m2], sewage heat potential[kWh], water body heat_potential[kWh]. This category does not support aggregation by buildings.
 metrics-other-renewables.category = Metrics
 
-metrics-district-heating = true
-metrics-district-heating.type = BooleanParameter
-metrics-district-heating.help = Metrics to calculate: DH plant thermal load[kWh], DH electricity consumption for pressure loss[kWh]. DH = district heating.
-metrics-district-heating.category = Metrics
-
-metrics-district-cooling = true
-metrics-district-cooling.type = BooleanParameter
-metrics-district-cooling.help = Metrics to calculate: DC plant thermal load[kWh], DC electricity consumption for pressure loss[kWh]. DC = district cooling.
-metrics-district-cooling.category = Metrics
+network-name =
+network-name.type = NetworkLayoutChoiceParameter
+network-name.help = Select an existing network layout to include its metrics.
+network-name.category = Metrics
 
 include-advanced-analytics = true
 include-advanced-analytics.type = BooleanParameter
