--- a/cea/default.config
+++ b/cea/default.config
@@ -424,6 +424,31 @@ heat-rejection-components.choices = COOLING_TOWERS
 heat-rejection-components.help = Technologies used for heat rejection. Used both as fallback when supply assemblies don't specify heat rejection components AND to determine component activation order when SUPPLY assemblies are used.
 heat-rejection-components.category = Thermal Network Settings
 
+panels-on-roof =
+panels-on-roof.type = SolarPanelChoiceParameter
+panels-on-roof.help = Type(s) of solar panels to consider for rooftop installation cost calculations.
+panels-on-roof.category = Solar Technology Settings
+
+panels-on-wall-north =
+panels-on-wall-north.type = SolarPanelChoiceParameter
+panels-on-wall-north.help = Type(s) of solar panels to consider for north-facing facade installation cost calculations.
+panels-on-wall-north.category = Solar Technology Settings
+
+panels-on-wall-south =
+panels-on-wall-south.type = SolarPanelChoiceParameter
+panels-on-wall-south.help = Type(s) of solar panels to consider for south-facing facade installation cost calculations.
+panels-on-wall-south.category = Solar Technology Settings
+
+panels-on-wall-east =
+panels-on-wall-east.type = SolarPanelChoiceParameter
+panels-on-wall-east.help = Type(s) of solar panels to consider for east-facing facade installation cost calculations.
+panels-on-wall-east.category = Solar Technology Settings
+
+panels-on-wall-west =
+panels-on-wall-west.type = SolarPanelChoiceParameter
+panels-on-wall-west.help = Type(s) of solar panels to consider for west-facing facade installation cost calculations.
+panels-on-wall-west.category = Solar Technology Settings
+
 [emissions]
 year-end =
 year-end.type = IntegerParameter
