updating export to grasshopper for the new network set up

--- a/cea/default.config
+++ b/cea/default.config
@@ -569,15 +569,10 @@ include-trees.type = BooleanParameter
 include-trees.help = True to export and include Trees information, if any.
 include-trees.category = Detailed Settings
 
-include-district-heating-network = True
-include-district-heating-network.type = BooleanParameter
-include-district-heating-network.help = True to export and include District Heating Network information, if any.
-include-district-heating-network.category = Detailed Settings
-
-include-district-cooling-network = True
-include-district-cooling-network.type = BooleanParameter
-include-district-cooling-network.help = True to export and include District Cooling Network information, if any.
-include-district-cooling-network.category = Detailed Settings
+network-name =
+network-name.type = NetworkLayoutChoiceParameter
+network-name.help = Select an existing network layout to export. Leave empty to skip network export. Both DH and DC networks will be exported if they exist for the selected layout.
+network-name.category = Detailed Settings
 
 
 [from-rhino-gh]
