network nullable for gh export

--- a/cea/default.config
+++ b/cea/default.config
@@ -571,6 +571,7 @@ include-trees.category = Detailed Settings
 
 network-name =
 network-name.type = NetworkLayoutChoiceParameter
+network-name.nullable = true
 network-name.help = Select an existing network layout to export. Leave empty to skip network export. Both DH and DC networks will be exported if they exist for the selected layout.
 network-name.category = Detailed Settings
 
