fixing Z coord issue with imported layout.shp

--- a/cea/default.config
+++ b/cea/default.config
@@ -585,7 +585,7 @@ copy-database = True
 copy-database.type = BooleanParameter
 copy-database.help = True to copy the Database of the reference Scenario to the current Scenario. Archetypes-Mapper will also be executed populating the building properties using the Database coped from the reference-Scenario.
 
-copy-terrain = False
+copy-terrain = True
 copy-terrain.type = BooleanParameter
 copy-terrain.help = True to copy the terrain file of the reference Scenario to the current Scenario. Use this when sure the new Scenarios all buildings including the surrounding fall on the precinct of the current Scenario.
 
