ran through but only place holders

--- a/cea/default.config
+++ b/cea/default.config
@@ -380,7 +380,8 @@ overheating-warning.category = Advanced
 [system-costs]
 network-name =
 network-name.type = NetworkLayoutChoiceParameter
-network-name.help = Select an existing network layout for the cost calculation. Networks are created by the 'thermal-network' script (part 1 and part 2 must be completed).
+network-name.nullable = true
+network-name.help = Select an existing network layout for the cost calculation, or select "(none)" to assess all buildings as standalone systems (ignoring district-scale supply settings). Networks are created by the 'thermal-network' script (part 1 and part 2 must be completed).
 
 network-type = DH, DC
 network-type.type = MultiChoiceParameter
