--- a/cea/default.config
+++ b/cea/default.config
@@ -392,19 +392,19 @@ network-type.category = Thermal Network Settings
 supply-type-cs =
 supply-type-cs.type = DistrictSupplyTypeParameter
 supply-type-cs.supply-category = SUPPLY_COOLING
-supply-type-cs.help = District cooling supply system type for baseline cost calculations. Only district-scale options are shown. Select "Use component settings below" to use the component parameters instead of a predefined assembly.
+supply-type-cs.help = Cooling supply system type(s) for baseline cost calculations. Select up to 2 assemblies: one building-scale (for standalone buildings) and one district-scale (for district-connected buildings). CEA automatically uses the appropriate scale based on each building's connectivity. Select "Use component settings below" to use the component parameters instead of a predefined assembly.
 supply-type-cs.category = Thermal Network Settings
 
 supply-type-hs =
 supply-type-hs.type = DistrictSupplyTypeParameter
 supply-type-hs.supply-category = SUPPLY_HEATING
-supply-type-hs.help = District heating supply system type for baseline cost calculations. Only district-scale options are shown. Select "Use component settings below" to use the component parameters instead of a predefined assembly.
+supply-type-hs.help = Heating supply system type(s) for baseline cost calculations. Select up to 2 assemblies: one building-scale (for standalone buildings) and one district-scale (for district-connected buildings). CEA automatically uses the appropriate scale based on each building's connectivity. Select "Use component settings below" to use the component parameters instead of a predefined assembly.
 supply-type-hs.category = Thermal Network Settings
 
 supply-type-dhw =
 supply-type-dhw.type = DistrictSupplyTypeParameter
 supply-type-dhw.supply-category = SUPPLY_HOTWATER
-supply-type-dhw.help = District domestic hot water supply system type for baseline cost calculations. Only district-scale options are shown. Select "Use component settings below" to use the component parameters instead of a predefined assembly.
+supply-type-dhw.help = Domestic hot water supply system type(s) for baseline cost calculations. Select up to 2 assemblies: one building-scale (for standalone buildings) and one district-scale (for district-connected buildings). CEA automatically uses the appropriate scale based on each building's connectivity. Select "Use component settings below" to use the component parameters instead of a predefined assembly.
 supply-type-dhw.category = Thermal Network Settings
 
 cooling-components = VAPOR_COMPRESSION_CHILLERS, ABSORPTION_CHILLERS
