--- a/cea/default.config
+++ b/cea/default.config
@@ -387,68 +387,68 @@ network-type = DH, DC
 network-type.type = MultiChoiceParameter
 network-type.choices = DH, DC
 network-type.help = Type(s) of district network to calculate costs for: "DH" (district heating), "DC" (district cooling), or both. Select multiple by separating with commas.
-network-type.category = Thermal Network Settings
+network-type.category = Energy Supply Configuration
 
 supply-type-cs =
 supply-type-cs.type = DistrictSupplyTypeParameter
 supply-type-cs.supply-category = SUPPLY_COOLING
-supply-type-cs.help = Cooling supply system type(s) for baseline cost calculations. Select up to 2 assemblies: one building-scale (for standalone buildings) and one district-scale (for district-connected buildings). CEA automatically uses the appropriate scale based on each building's connectivity. Select "Use component settings below" to use the component parameters instead of a predefined assembly.
-supply-type-cs.category = Thermal Network Settings
+supply-type-cs.help = Cooling supply system type(s) for baseline cost calculations. Select up to 2 assemblies: one building-scale (for standalone buildings) and one district-scale (for district-connected buildings). CEA automatically uses the appropriate scale based on each building's connectivity. Select "Custom (use component settings below)" to use the component parameters instead of a predefined assembly.
+supply-type-cs.category = Energy Supply Configuration
 
 supply-type-hs =
 supply-type-hs.type = DistrictSupplyTypeParameter
 supply-type-hs.supply-category = SUPPLY_HEATING
-supply-type-hs.help = Heating supply system type(s) for baseline cost calculations. Select up to 2 assemblies: one building-scale (for standalone buildings) and one district-scale (for district-connected buildings). CEA automatically uses the appropriate scale based on each building's connectivity. Select "Use component settings below" to use the component parameters instead of a predefined assembly.
-supply-type-hs.category = Thermal Network Settings
+supply-type-hs.help = Heating supply system type(s) for baseline cost calculations. Select up to 2 assemblies: one building-scale (for standalone buildings) and one district-scale (for district-connected buildings). CEA automatically uses the appropriate scale based on each building's connectivity. Select "Custom (use component settings below)" to use the component parameters instead of a predefined assembly.
+supply-type-hs.category = Energy Supply Configuration
 
 supply-type-dhw =
 supply-type-dhw.type = DistrictSupplyTypeParameter
 supply-type-dhw.supply-category = SUPPLY_HOTWATER
-supply-type-dhw.help = Domestic hot water supply system type(s) for baseline cost calculations. Select up to 2 assemblies: one building-scale (for standalone buildings) and one district-scale (for district-connected buildings). CEA automatically uses the appropriate scale based on each building's connectivity. Select "Use component settings below" to use the component parameters instead of a predefined assembly.
-supply-type-dhw.category = Thermal Network Settings
+supply-type-dhw.help = Domestic hot water supply system type(s) for baseline cost calculations. Select up to 2 assemblies: one building-scale (for standalone buildings) and one district-scale (for district-connected buildings). CEA automatically uses the appropriate scale based on each building's connectivity. Select "Custom (use component settings below)" to use the component parameters instead of a predefined assembly.
+supply-type-dhw.category = Energy Supply Configuration
 
 cooling-components = VAPOR_COMPRESSION_CHILLERS, ABSORPTION_CHILLERS
 cooling-components.type = MultiChoiceParameter
 cooling-components.choices = VAPOR_COMPRESSION_CHILLERS, ABSORPTION_CHILLERS
 cooling-components.help = Technologies to consider for district cooling plants. Order indicates priority for deployment. Used both as fallback when supply-type-cs is not set AND to determine component activation order when SUPPLY assemblies are used.
-cooling-components.category = Thermal Network Settings
+cooling-components.category = Energy Supply Configuration
 
 heating-components = BOILERS, HEAT_PUMPS
 heating-components.type = MultiChoiceParameter
 heating-components.choices = BOILERS, HEAT_PUMPS, COGENERATION_PLANTS
 heating-components.help = Technologies to consider for district heating plants. Order indicates priority for deployment. Used both as fallback when supply-type-hs is not set AND to determine component activation order when SUPPLY assemblies are used.
-heating-components.category = Thermal Network Settings
+heating-components.category = Energy Supply Configuration
 
 heat-rejection-components = COOLING_TOWERS
 heat-rejection-components.type = MultiChoiceParameter
 heat-rejection-components.choices = COOLING_TOWERS
 heat-rejection-components.help = Technologies used for heat rejection. Used both as fallback when supply assemblies don't specify heat rejection components AND to determine component activation order when SUPPLY assemblies are used.
-heat-rejection-components.category = Thermal Network Settings
+heat-rejection-components.category = Energy Supply Configuration
 
 panels-on-roof =
 panels-on-roof.type = SolarPanelChoiceParameter
 panels-on-roof.help = Type(s) of solar panels to consider for rooftop installation cost calculations.
-panels-on-roof.category = Solar Technology Settings
+panels-on-roof.category = Solar Technology Configuration
 
 panels-on-wall-north =
 panels-on-wall-north.type = SolarPanelChoiceParameter
 panels-on-wall-north.help = Type(s) of solar panels to consider for north-facing facade installation cost calculations.
-panels-on-wall-north.category = Solar Technology Settings
+panels-on-wall-north.category = Solar Technology Configuration
 
 panels-on-wall-south =
 panels-on-wall-south.type = SolarPanelChoiceParameter
 panels-on-wall-south.help = Type(s) of solar panels to consider for south-facing facade installation cost calculations.
-panels-on-wall-south.category = Solar Technology Settings
+panels-on-wall-south.category = Solar Technology Configuration
 
 panels-on-wall-east =
 panels-on-wall-east.type = SolarPanelChoiceParameter
 panels-on-wall-east.help = Type(s) of solar panels to consider for east-facing facade installation cost calculations.
-panels-on-wall-east.category = Solar Technology Settings
+panels-on-wall-east.category = Solar Technology Configuration
 
 panels-on-wall-west =
 panels-on-wall-west.type = SolarPanelChoiceParameter
 panels-on-wall-west.help = Type(s) of solar panels to consider for west-facing facade installation cost calculations.
-panels-on-wall-west.category = Solar Technology Settings
+panels-on-wall-west.category = Solar Technology Configuration
 
 [emissions]
 year-end =
