--- a/cea/default.config
+++ b/cea/default.config
@@ -933,6 +933,11 @@ metrics-other-renewables.type = BooleanParameter
 metrics-other-renewables.help = Metrics to calculate: geothermal heat potential[kWh], area for ground source heat pump[m2], sewage heat potential[kWh], water body heat_potential[kWh]. This category does not support aggregation by buildings.
 metrics-other-renewables.category = Metrics
 
+metrics-costs = true
+metrics-costs.type = BooleanParameter
+metrics-costs.help = Metrics to calculate: total CAPEX[USD], total annual costs (TAC)[USD/yr], building-scale costs, district-scale costs, component-level cost breakdowns by service type. This category does not support aggregation by time period or buildings.
+metrics-costs.category = Metrics
+
 network-name =
 network-name.type = NetworkLayoutChoiceParameter
 network-name.help = Select an existing network layout to include its metrics.
