--- a/cea/default.config
+++ b/cea/default.config
@@ -940,7 +940,8 @@ metrics-costs.category = Metrics
 
 network-name =
 network-name.type = NetworkLayoutChoiceParameter
-network-name.help = Select an existing network layout to include its metrics.
+network-name.help = Select an existing network layout to include its metrics. Metrics to calculate: DH/DC plant thermal load[kWh], DH/DC electricity consumption for pressure loss[kWh]. DH = district heating. DC = district cooling.
+
 network-name.category = Metrics
 
 include-advanced-analytics = true
