putting back config

--- a/cea/default.config
+++ b/cea/default.config
@@ -476,6 +476,51 @@ pv-codes.kwargs = conversion_technology=PHOTOVOLTAIC_PANELS
 pv-codes.column = code
 pv-codes.category = PV Offsetting
 
+
+grid-carbon-intensity-dataset-csv =
+grid-carbon-intensity-dataset-csv.type = InputFileParameter
+grid-carbon-intensity-dataset-csv.extensions = csv
+grid-carbon-intensity-dataset-csv.nullable = true
+grid-carbon-intensity-dataset-csv.help = Path to CSV file containing hourly grid carbon intensity data with a column for carbon intensity in gCO2e/kWh.
+    Verify units carefully to ensure reliable results.
+    Leave blank to use default data from CEA Database (Components-feedstocks > GRID).
+grid-carbon-intensity-dataset-csv.category = Customise Hourly Grid Emission Data
+
+csv-carbon-intensity-column-name =
+csv-carbon-intensity-column-name.type = StringParameter
+csv-carbon-intensity-column-name.nullable = true
+csv-carbon-intensity-column-name.help = Column name in the CSV file containing carbon intensity data in gCO2e/kWh.
+    Required if grid-carbon-intensity-dataset-csv is provided.
+csv-carbon-intensity-column-name.category = Customise Hourly Grid Emission Data
+
+grid-decarbonise-reference-year =
+grid-decarbonise-reference-year.type = IntegerParameter
+grid-decarbonise-reference-year.help = Starting year for grid decarbonisation.
+    Grid emission factor decreases linearly from 1.0 in the reference year to the target emission factor in the target year.
+    Example: reference year 2024, target year 2060, target factor 0.0 gives emission factors of 1.0 (2024), 0.5 (2042), 0.0 (2060 onwards).
+    Leave blank to disable grid decarbonisation.
+grid-decarbonise-reference-year.nullable = True
+grid-decarbonise-reference-year.category = Grid Decarbonisation
+
+grid-decarbonise-target-year =
+grid-decarbonise-target-year.type = IntegerParameter
+grid-decarbonise-target-year.help = Year when grid reaches target emission factor.
+    Emission factors are linearly interpolated between reference year and target year.
+    Emission factor remains constant at target level from this year onwards.
+    Leave blank to disable grid decarbonisation.
+grid-decarbonise-target-year.nullable = True
+grid-decarbonise-target-year.category = Grid Decarbonisation
+
+grid-decarbonise-target-emission-factor =
+grid-decarbonise-target-emission-factor.type = RealParameter
+grid-decarbonise-target-emission-factor.help = Target emission factor for grid decarbonisation (relative to reference year baseline).
+    1.0 = no change, 0.0 = fully decarbonised grid.
+    Values >1.0 indicate grid carbonisation (increasing emissions).
+    Negative values are not supported (grid cannot be carbon negative).
+    Leave blank to disable grid decarbonisation.
+grid-decarbonise-target-emission-factor.nullable = True
+grid-decarbonise-target-emission-factor.category = Grid Decarbonisation
+
 [anthropogenic-heat]
 network-name =
 network-name.type = NetworkLayoutChoiceParameter
