bar plot for heat somewhat working

--- a/cea/default.config
+++ b/cea/default.config
@@ -2058,6 +2058,28 @@ x-to-plot.type = ChoiceParameter
 x-to-plot.choices = building, building_faceted_by_months, building_faceted_by_seasons, building_faceted_by_construction_type, building_faceted_by_main_use_type, district_and_hourly, district_and_hourly_faceted_by_months, district_and_hourly_faceted_by_seasons, district_and_daily, district_and_daily_faceted_by_months, district_and_daily_faceted_by_seasons, district_and_monthly, district_and_monthly_faceted_by_seasons, district_and_seasonally, district_and_annually_or_selected_period
 x-to-plot.help = Select the column to plot on the X-axis.
 
+[plots-heat-rejection]
+y-metric-to-plot = heat_rejection
+y-metric-to-plot.type = MultiChoiceParameter
+y-metric-to-plot.choices = heat_rejection
+y-metric-to-plot.help = Heat rejection to the environment from energy systems (MWh or kWh).
+
+y-metric-unit = MWh
+y-metric-unit.type = ChoiceParameter
+y-metric-unit.choices = MWh, kWh, Wh
+y-metric-unit.help = Select the unit for the Y-axis metric.
+y-metric-unit.category = Y-axis settings
+
+y-normalised-by = no_normalisation
+y-normalised-by.type = ChoiceParameter
+y-normalised-by.choices = no_normalisation, gross_floor_area, conditioned_floor_area
+y-normalised-by.help = Normalisation factor. For plants, uses sum of serviced building GFA divided by number of plants.
+
+x-to-plot = building
+x-to-plot.type = ChoiceParameter
+x-to-plot.choices = building, building_faceted_by_months, building_faceted_by_seasons, building_faceted_by_construction_type, building_faceted_by_main_use_type, district_and_hourly, district_and_hourly_faceted_by_months, district_and_hourly_faceted_by_seasons, district_and_daily, district_and_daily_faceted_by_months, district_and_daily_faceted_by_seasons, district_and_monthly, district_and_monthly_faceted_by_seasons, district_and_seasonally, district_and_annually_or_selected_period
+x-to-plot.help = Select the column to plot on the X-axis.
+
 [plots-lifecycle-emissions]
 y-category-to-plot = operation, production, demolition, biogenic
 y-category-to-plot.type = MultiChoiceParameter
