summary feature working

--- a/cea/default.config
+++ b/cea/default.config
@@ -985,6 +985,11 @@ metrics-costs.type = BooleanParameter
 metrics-costs.help = Metrics to calculate: total CAPEX[USD], total annual costs (TAC)[USD/yr], building-scale costs, district-scale costs, component-level cost breakdowns by service type. This category does not support aggregation by time period or buildings.
 metrics-costs.category = Metrics
 
+metrics-heat-rejection = true
+metrics-heat-rejection.type = BooleanParameter
+metrics-heat-rejection.help = Metrics to calculate: heat rejection[kWh]. Supports aggregation by time period and buildings. Includes both building-scale heat rejection and district plant heat rejection.
+metrics-heat-rejection.category = Metrics
+
 network-name =
 network-name.type = NetworkLayoutChoiceParameter
 network-name.help = Select an existing network layout to include its metrics. Metrics to calculate: DH/DC plant thermal load[kWh], DH/DC electricity consumption for pressure loss[kWh]. DH = district heating. DC = district cooling.
