re-org heat and costs results

--- a/cea/default.config
+++ b/cea/default.config
@@ -992,7 +992,8 @@ metrics-heat-rejection.category = Metrics
 
 network-name =
 network-name.type = NetworkLayoutChoiceParameter
-network-name.help = Select an existing network layout to include its metrics. Metrics to calculate: DH/DC plant thermal load[kWh], DH/DC electricity consumption for pressure loss[kWh]. DH = district heating. DC = district cooling.
+network-name.nullable = true
+network-name.help = Select an existing network layout to read results from, or select "(none)" for standalone-only results. This should match the network-name used when running system-costs and anthropogenic-heat scripts.
 
 network-name.category = Metrics
 
