solar technologies working with filtered buildings now

--- a/cea/default.config
+++ b/cea/default.config
@@ -424,6 +424,11 @@ heat-rejection-components.choices = COOLING_TOWERS
 heat-rejection-components.help = Technologies used for heat rejection. Used both as fallback when supply assemblies don't specify heat rejection components AND to determine component activation order when SUPPLY assemblies are used.
 heat-rejection-components.category = Energy Supply Configuration
 
+buildings =
+buildings.type = BuildingsParameter
+buildings.help = Buildings to include in solar technology installation.
+buildings.category = Solar Technology Configuration
+
 panels-on-roof =
 panels-on-roof.type = SolarPanelChoiceParameter
 panels-on-roof.help = Type(s) of solar panels to consider for rooftop installation cost calculations.
