--- a/cea/default.config
+++ b/cea/default.config
@@ -424,6 +424,7 @@ heat-rejection-components.choices = COOLING_TOWERS
 heat-rejection-components.help = Technologies used for heat rejection. Used both as fallback when supply assemblies don't specify heat rejection components AND to determine component activation order when SUPPLY assemblies are used.
 heat-rejection-components.category = Energy Supply Configuration
 
+[system-costs-solar]
 buildings =
 buildings.type = BuildingsParameter
 buildings.help = Buildings to include in solar technology installation.
@@ -526,52 +527,6 @@ grid-decarbonise-target-emission-factor.help = Target emission factor for grid d
 grid-decarbonise-target-emission-factor.nullable = True
 grid-decarbonise-target-emission-factor.category = Grid Decarbonisation
 
-[anthropogenic-heat]
-network-name =
-network-name.type = NetworkLayoutChoiceParameter
-network-name.nullable = true
-network-name.help = Select an existing network layout for heat rejection assessment, or select "(none)" to assess all buildings as standalone systems. Networks are created by the 'thermal-network' script.
-
-network-type = DH, DC
-network-type.type = MultiChoiceParameter
-network-type.choices = DH, DC
-network-type.help = Type(s) of district network to calculate heat rejection for: "DH" (district heating), "DC" (district cooling), or both.
-
-supply-type-cs =
-supply-type-cs.type = DistrictSupplyTypeParameter
-supply-type-cs.supply-category = SUPPLY_COOLING
-supply-type-cs.help = Cooling supply system type(s) for heat rejection calculations. Select up to 2 assemblies: one building-scale (for standalone buildings) and one district-scale (for district-connected buildings). CEA automatically uses the appropriate scale based on each building's connectivity. If nothing is selected, CEA will fall back to Building Properties/Supply. Select "Custom (use component settings below)" to use component parameters instead.
-supply-type-cs.category = Supply System Configuration
-
-supply-type-hs =
-supply-type-hs.type = DistrictSupplyTypeParameter
-supply-type-hs.supply-category = SUPPLY_HEATING
-supply-type-hs.help = Heating supply system type(s) for heat rejection calculations. Select up to 2 assemblies: one building-scale (for standalone buildings) and one district-scale (for district-connected buildings). CEA automatically uses the appropriate scale based on each building's connectivity. If nothing is selected, CEA will fall back to Building Properties/Supply. Select "Custom (use component settings below)" to use component parameters instead.
-supply-type-hs.category = Supply System Configuration
-
-supply-type-dhw =
-supply-type-dhw.type = DistrictSupplyTypeParameter
-supply-type-dhw.supply-category = SUPPLY_HOTWATER
-supply-type-dhw.help = Domestic hot water supply system type(s) for heat rejection calculations. Select up to 2 assemblies: one building-scale (for standalone buildings) and one district-scale (for district-connected buildings). CEA automatically uses the appropriate scale based on each building's connectivity. If nothing is selected, CEA will fall back to Building Properties/Supply. Select "Custom (use component settings below)" to use component parameters instead.
-supply-type-dhw.category = Supply System Configuration
-
-cooling-components = VAPOR_COMPRESSION_CHILLERS
-cooling-components.type = MultiChoiceParameter
-cooling-components.choices = VAPOR_COMPRESSION_CHILLERS, ABSORPTION_CHILLERS
-cooling-components.help = Technologies to consider for district cooling plants. Used when supply-type-cs is set to "Custom" or as fallback when assemblies don't specify components.
-cooling-components.category = Supply System Configuration
-
-heating-components = BOILERS
-heating-components.type = MultiChoiceParameter
-heating-components.choices = BOILERS, HEAT_PUMPS, COGENERATION_PLANTS
-heating-components.help = Technologies to consider for district heating plants. Used when supply-type-hs is set to "Custom" or as fallback when assemblies don't specify components.
-heating-components.category = Supply System Configuration
-
-heat-rejection-components = COOLING_TOWERS
-heat-rejection-components.type = MultiChoiceParameter
-heat-rejection-components.choices = COOLING_TOWERS
-heat-rejection-components.help = Technologies used for heat rejection from cooling systems. Used when assemblies don't specify heat rejection components.
-heat-rejection-components.category = Supply System Configuration
 
 [extract-reference-case]
 destination = {general:scenario}/../..
