new multichoice parameter feedstock

--- a/cea/default.config
+++ b/cea/default.config
@@ -403,10 +403,10 @@ supply-type-dhw.type = DistrictSupplyTypeParameter
 supply-type-dhw.supply-category = SUPPLY_HOTWATER
 supply-type-dhw.help = Domestic hot water supply system type(s) for baseline cost calculations. Select up to 2 assemblies: one building-scale (for standalone buildings) and one district-scale (for district-connected buildings). CEA automatically uses the appropriate scale based on each building's connectivity. If nothing is selected, CEA will fall back to the supply systems specified in Building Properties/Supply. Select "Custom (use component settings below)" to use the component parameters instead of a predefined assembly.
 
-available-feedstocks = GRID
-available-feedstocks.type = MultiChoiceParameter
-available-feedstocks.choices = GRID, BIOMASS, SOLAR_THERMAL
+available-feedstocks = GRID, NATURALGAS, OIL
+available-feedstocks.type = MultiChoiceFeedstockParameter
 available-feedstocks.help = Feedstock options to consider for components of energy supply configuration fallback below. Order indicates priority for deployment.
+available-feedstocks.category = Energy Supply Configuration Fallbacks
 
 cooling-components = VAPOR_COMPRESSION_CHILLERS, ABSORPTION_CHILLERS
 cooling-components.type = MultiChoiceParameter
@@ -430,26 +430,32 @@ heat-rejection-components.category = Energy Supply Configuration Fallbacks
 buildings =
 buildings.type = BuildingsParameter
 buildings.help = Buildings to include in solar technology installation.
+buildings.category = Solar Technology Configuration
 
 panels-on-roof =
 panels-on-roof.type = SolarPanelChoiceParameter
 panels-on-roof.help = Type(s) of solar panels to consider for rooftop installation cost calculations.
+panels-on-roof.category = Solar Technology Configuration
 
 panels-on-wall-north =
 panels-on-wall-north.type = SolarPanelChoiceParameter
 panels-on-wall-north.help = Type(s) of solar panels to consider for north-facing facade installation cost calculations.
+panels-on-wall-north.category = Solar Technology Configuration
 
 panels-on-wall-south =
 panels-on-wall-south.type = SolarPanelChoiceParameter
 panels-on-wall-south.help = Type(s) of solar panels to consider for south-facing facade installation cost calculations.
+panels-on-wall-south.category = Solar Technology Configuration
 
 panels-on-wall-east =
 panels-on-wall-east.type = SolarPanelChoiceParameter
 panels-on-wall-east.help = Type(s) of solar panels to consider for east-facing facade installation cost calculations.
+panels-on-wall-east.category = Solar Technology Configuration
 
 panels-on-wall-west =
 panels-on-wall-west.type = SolarPanelChoiceParameter
 panels-on-wall-west.help = Type(s) of solar panels to consider for west-facing facade installation cost calculations.
+panels-on-wall-west.category = Solar Technology Configuration
 
 [emissions]
 year-end =
