setting up config and scripts

--- a/cea/default.config
+++ b/cea/default.config
@@ -53,6 +53,36 @@ buildings.type = BuildingsParameter
 buildings.help = List of buildings for data-mapping based on the Database. Leave blank to select all.
 buildings.category = Customisation
 
+[building-data-helper]
+google-api-key =
+google-api-key.type = StringParameter
+google-api-key.help = Google Street View API key (obtain from Google Cloud Console). Required to fetch street-level imagery for AI analysis.
+
+create-backup = true
+create-backup.type = BooleanParameter
+create-backup.help = Create a backup copy of zone.shp before making modifications. Backup will be saved as zone_backup.shp.
+
+buildings =
+buildings.type = BuildingsParameter
+buildings.help = List of buildings to process with AI enrichment. Leave blank to process all buildings.
+buildings.category = Customisation
+
+enquire-floors-ag = true
+enquire-floors-ag.type = BooleanParameter
+enquire-floors-ag.help = Enquire and overwrite values for above-ground floors using AI predictions.
+enquire-floors-ag.category = Customisation
+
+enquire-year-construction = true
+enquire-year-construction.type = BooleanParameter
+enquire-year-construction.help = Enquire and overwrite values for year of construction using AI predictions.
+enquire-year-construction.category = Customisation
+
+enquire-use-type = true
+enquire-use-type.type = BooleanParameter
+enquire-use-type.help = Enquire and overwrite values for building use type (mix) and ratios using AI predictions.
+enquire-use-type.category = Customisation
+
+
 [streets-helper]
 include-private-streets = true
 include-private-streets.type = BooleanParameter
